Poplulates questions and adds new question after each answer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="d-flex justify-content-between pt-3 mx-3">
         <a href="#">High Scores</a>
-        <div>Timer Element</div>
+        <div id="timer">Time Remaining: 75</div>
         
     </header>
 
