--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         </div>
     </main>
 
+    <footer>
+
+    </footer>
+
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
