--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 </head>
 <body>
     <header class="d-flex justify-content-between pt-3 mx-3">
-        <a href="#">High Scores</a>
+        <p class="btn link-btn" id="scores-link">High Scores</p>
         <div id="timer">Time Remaining: 75</div>
-        
     </header>
 
     <main id="quiz-container">
@@ -30,8 +29,8 @@
             </section>
         </div>
     </main>
-
-    <footer>
+    
+    <footer class="my-3 py-3 border-top grade">
 
     </footer>
 
